--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,12 @@ readme = "README.md"
 
 requires-python = ">= 3.12"
 dependencies = [
+    "django>=5.2",
+    "django-tailwind-cli>=4.4.2",
+    "gunicorn>=23.0.0",
     "python-dotenv >= 1.1.1",
     "pyyaml>=6.0.2",
+    "whitenoise>=6.11.0",
 ]
 
 
@@ -22,6 +26,8 @@ dev = [
     "pre-commit >= 4.0.1",
     "ruff >= 0.12.10",
     "pyright >= 1.1.405",
+    "pytest-django>=4.11.1",
+    "django-stubs>=5.2",
 ]
 
 [tool.uv]
@@ -48,7 +54,7 @@ omit = [
 # https://docs.astral.sh/ruff/configuration/
 
 [tool.ruff]
-line-length = 90
+line-length = 98
 indent-width = 4
 exclude = [
     ".git",
